--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <img src='background/city.png' alt='text'>
+    <img src='background/city.png' alt='text' width="1000" height="1024">
 </body>
 <script>
 </script>
