--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <img src='background/city.png' alt='text' width="2048" height="4000">
+    <img src='background/city.png' alt='text' style="width: 100%; height:300px">
 </body>
 <script>
 </script>
