--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang='ru'>
 <head>
     <meta charset="UTF-8">
+    <style>
+        html, body {
+          margin: 0;
+          padding: 0;
+          height: 100%;
+        }
+    
+        body {
+          background-image: src='background/city.png';
+          background-size: cover;       /* растягивает на весь экран */
+          background-position: center;  /* центрирует изображение */
+          background-repeat: no-repeat; /* не повторять */
+        }
+      </style>
 </head>
 <body>
-    <img src='background/city.png' alt='text' style="width: 100%; height:200px">
 </body>
 <script>
 </script>
