--- a/index.html
+++ b/index.html
@@ -2,23 +2,9 @@
 <html lang='ru'>
 <head>
     <meta charset="UTF-8">
-    <style>
-        html, body {
-          margin: 0;
-          padding: 0;
-          height: 100%;
-          width: 100%;
-        }
-    
-        body {
-          background-image: src='background/city.png';
-          background-size: cover;       /* растягивает на весь экран */
-          background-position: center;  /* центрирует изображение */
-          background-repeat: no-repeat; /* не повторять */
-        }
-      </style>
 </head>
 <body>
+  <img src="background/city.png" width="1760px" height="455px">
 </body>
 <script>
 </script>
