--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang='ru'>
 <head>
     <meta charset="UTF-8">
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+    
+      .fullscreen-img {
+        width: 100vw;       /* 100% ширины окна */
+        height: 100vh;      /* 100% высоты окна */
+        object-fit: cover;  /* сохраняет пропорции и обрезает лишнее */
+      }
+    </style>
 </head>
 <body>
-  <img src="background/city.png" width="1760px" height="455px">
 </body>
 <script>
+//<img src="background/city.png" width="1760" height="455">
 </script>
 </html>
