--- a/index.html
+++ b/index.html
@@ -2,23 +2,15 @@
 <html lang='ru'>
 <head>
     <meta charset="UTF-8">
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-    
-      .fullscreen-img {
-        width: 100vw;       /* 100% ширины окна */
-        height: 100vh;      /* 100% высоты окна */
-        object-fit: cover;  /* сохраняет пропорции и обрезает лишнее */
-      }
-    </style>
 </head>
 <body>
+  <img src="background/city.png" width="1760" height="455">
 </body>
 <script>
-//<img src="background/city.png" width="1760" height="455">
 </script>
 </html>
+//git add .
+//git commit -m "s"
+//git remote add origin https://github.com/dimania007-code/cite.git
+//git branch -M main
+//git push -u origin main
