--- a/index.html
+++ b/index.html
@@ -7,19 +7,133 @@
         margin: 0;
         padding: 0;
         height: 100%;
+        object-fit: cover; /* сохраняет пропорции */
+        z-index: 0;
       }
     
       .fullscreen-img {
         width: 100vw;      /* растягивает на всю ширину окна */
         height: 100vh;     /* растягивает на всю высоту окна */
-        object-fit: cover; /* сохраняет пропорции, обрезая лишнее */
+         /* сохраняет пропорции, обрезая лишнее */
       }
     </style>
-    <img src="background/city.png" class="fullscreen-img" alt="Город">
+    <style>
+          body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #222; /* просто для контраста */
+    }
+      .mybutton {
+        width: 58px;
+        height: 55px;
+        background-image: url("buttons/button_incompleted.png");
+        background-size: cover;
+        background-position: center;
+        color: black;
+        border: none;
+        padding: 5px 10px; /*вутри картинки */
+        cursor: pointer;
+        position: absolute;
+        z-index: 1; /*поверх фона*/
+      }.mybutton:hover {
+        background-image: url("buttons/button_alert.png");
+        transform: scale(1.05);
+      }.mybutton:active {
+        transform: scale(0.9);
+      }
+      .btn1 {
+        top: 326px;
+        left: 165px;
+      }
+      .modal-content {
+        background: white;
+        padding: 20px;
+        border: none;
+        text-align: center;
+        width:500px;   
+        height:350px;
+      }.answers {
+      display: flex;
+      flex-direction: column; /* расположение сверху вниз */
+      align-items: flex-start; /* прижать к левой стороне */
+      margin-top: 15px;
+      }.modal-content:button {
+        display:block;
+        margin:10px auto;
+        padding: 10px 20px;
+        cursor: pointer;
+      }.modal {
+        display: none;
+        position:fixed;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        z-index: 2
+      }.modal-header {
+      text-align: center;
+    }
+
+    .modal-header img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      display: block;
+      margin: 0 auto 10px;
+    }
+    </style>
 </head>
 <body>
+  <img src="background/city.png" class="fullscreen-img" alt="Город">
+  <button class="mybutton btn1" id="backgroundButton">BUTTON</button>
+  <div class="modal" id="quizModal">
+    <div class="modal-content">
+      <img  src="Questions/crosses/cross1,5.png" width="490" height="50">
+      <h2>Question</h2>
+  <div class="answers">
+    <button data-correct="true">True answer</button>
+    <button>Not here</button>
+    <button>What wrong with you?</button>
+  </div>
+  </div>
+</div>
 </body>
 <script>
+const button = document.querySelector('.mybutton');
+const modal = document.getElementById('quizModal');
+const answers = document.querySelectorAll('.answers button')
+
+// Показать окно при нажатии на кнопку
+button.addEventListener('click', () => {
+modal.style.display = 'flex';
+});
+
+// Функция обработки ответа
+function answer(choice) {
+modal.style.display = 'none'; // закрыть окно после выбора
+}
+modal.addEventListener('click', (event) => {
+if (event.target === modal) { // клик именно по фону
+   modal.style.display = 'none';
+  }
+})
+answers.forEach(btn => {
+  btn.addEventListener('click', () => {
+    if (btn.dataset.correct === "true") {
+      modal.style.display = 'none';
+      backgroundButton.style.backgroundImage = "url('buttons/button_completed.png')"
+    } else {
+      // Неправильный ответ — окно остаётся открытым
+      btn.textContent = 'imagine that this is a cross'
+    }
+  });
+})
 //git add .
 //git commit -m "s"
 //git remote add origin https://github.com/dimania007-code/cite.git
